2011-09-16 Satoshi Konno <skonno@cybergarage.org>
	* 2.4

2011-09-10 Satoshi Konno <skonno@cybergarage.org>
	* Fixed to compile using XCode4 on MacOSX and iOS normally.
	* Added source codes for Objective-C
	* Removed TARGET_OS_IPHONE define from the compiler option setting.

2011-03-09 Satoshi Konno <skonno@cybergarage.org>
	* Imporved cg_log_print() to return immediately when the output target is nothing.
	* Added cg_upnpav_content_setupnpalbumarturi() and cg_upnpav_content_getupnpalbumarturi().

2011-02-23 Satoshi Konno <skonno@cybergarage.org>
	* Added the control point parameter into CG_UPNP_DEVICE_LISTENER.
	* Added cg_upnp_ssdprequest_print() and cg_upnp_ssdpresponse_print().
	* Added some debug messages.
	* Added CGUpnpDeviceDelegate (Objective-C).
	
2010-10-26  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_controlpoint_isrunning().

2010-08-20  Satoshi Konno <skonno@cybergarage.org>
	* Changed some source codes to compile normally using Visual Studio 2008.
	* Added some project files for Visual Studio 2008.
	* Added cg_upnpav_dms_updatenetworkinterfaces() and cg_upnpav_dms_getnetworkinterface();

2010-08-17  Ariel Yaloz <arielyz@hotmail.com>
	* Added support for getting the list of allowable values for a state variable
	* Added a method for checking whether a state variable is implemented
	* Fix compilation on MacOS X
	
2010-07-31 Roman Shterenzon <romanbsd@yahoo.com>
	* Fixed autoconf warnings
	* Don't append the original query to path when it already has a query (fixes WMP11/12 access)
	* Fixed several memory leaks in Objective-C wrapper
	* Proper handling of edge cases in src/cybergarage/upnp/cservice.c and
	  std/av/src/cybergarage/upnp/std/av/cprotocolinfo.c
	* Fix crashes caused by attempts to initialize NSString with NULL cstring
	* Added modelNumber and modelName methods to CGUpnpDevice class

2010-06-28 Christian Zuckschwerdt <Christian@Zuckschwerdt.org>
	* Fixed CGUpnpAction::arguments() not to release temporary object.
	