@@ -1,3 +1,6 @@
+2011-09-21 Satoshi Konno <skonno@cybergarage.org>
+	* Fixed cupnp_function.c to compile normally on iOS platforms.
+
 2011-09-16 Satoshi Konno <skonno@cybergarage.org>
 	* 2.4
 
